# hyperscan

./: .gitignore  CMakeLists.txt  hs.def
apps/: CMakeLists.txt
apps/access_violation_case_1/: CMakeLists.txt  hsavc1.cpp
apps/access_violation_case_2/: CMakeLists.txt  hsavc2.cpp
